src/parser/ParChapel.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.12 from ParChapel.y
-----------------------------------------------------------------------------

state 103 contains 1 shift/reduce conflicts.
state 184 contains 1 shift/reduce conflicts.
state 190 contains 1 shift/reduce conflicts.

terminal '++' is unused
terminal '--' is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	Ident -> L_ident                                   (1)
	Char -> L_charac                                   (2)
	Integer -> L_integ                                 (3)
	Double -> L_doubl                                  (4)
	String -> L_quoted                                 (5)
	Program -> ListDecl                                (6)
	Decl -> 'proc' Ident '(' ListForm ')' Intent ':' Type Block   (7)
	Decl -> 'var' ListVDecl ';'                        (8)
	Decl -> 'param' ListCDecl ';'                      (9)
	Form -> Intent Ident ':' Type                      (10)
	Intent ->                                          (11)
	Intent -> 'in'                                     (12)
	Intent -> 'out'                                    (13)
	Intent -> 'inout'                                  (14)
	Intent -> 'ref'                                    (15)
	Intent -> 'const' 'in'                             (16)
	Intent -> 'const' 'ref'                            (17)
	VDecl -> Ident ':' Type                            (18)
	VDecl -> Ident ':' Type '=' RExp                   (19)
	CDecl -> Ident ':' Type '=' RExp                   (20)
	Type -> Compound Basic                             (21)
	Compound ->                                        (22)
	Compound -> Compound '[' RExp ']'                  (23)
	Compound -> Compound '*'                           (24)
	Basic -> 'bool'                                    (25)
	Basic -> 'char'                                    (26)
	Basic -> 'int'                                     (27)
	Basic -> 'real'                                    (28)
	Basic -> 'string'                                  (29)
	Basic -> 'void'                                    (30)
	Block -> '{' '}'                                   (31)
	Block -> '{' ListDecl '}'                          (32)
	Block -> '{' ListStm '}'                           (33)
	Block -> '{' ListDecl ListStm '}'                  (34)
	Stm -> ';' Stm                                     (35)
	Stm -> Block                                       (36)
	Stm -> Ident '(' ListRExp ')' ';'                  (37)
	Stm -> LExp '=' RExp ';'                           (38)
	Stm -> LExp '+=' RExp ';'                          (39)
	Stm -> LExp '-=' RExp ';'                          (40)
	Stm -> LExp '*=' RExp ';'                          (41)
	Stm -> LExp '/=' RExp ';'                          (42)
	Stm -> LExp '%=' RExp ';'                          (43)
	Stm -> LExp '^=' RExp ';'                          (44)
	Stm -> LExp ';'                                    (45)
	Stm -> 'if' RExp 'then' Stm                        (46)
	Stm -> 'if' RExp Block                             (47)
	Stm -> 'if' RExp 'then' Stm 'else' Stm             (48)
	Stm -> 'if' RExp Block 'else' Stm                  (49)
	Stm -> 'while' RExp 'do' Stm                       (50)
	Stm -> 'while' RExp Block                          (51)
	Stm -> 'do' Stm 'while' RExp ';'                   (52)
	Stm -> 'for' Ident 'in' Range 'do' Stm             (53)
	Stm -> 'for' Ident 'in' Range Block                (54)
	Stm -> 'return' ';'                                (55)
	Stm -> 'return' RExp ';'                           (56)
	Stm -> 'break' ';'                                 (57)
	Stm -> 'continue' ';'                              (58)
	Range -> '{' RExp '..' RExp '}'                    (59)
	LExp -> '*' LExp                                   (60)
	LExp -> LExp '[' RExp ']'                          (61)
	LExp -> Ident                                      (62)
	LExp -> '(' LExp ')'                               (63)
	RExp -> RExp '||' RExp                             (64)
	RExp -> RExp '&&' RExp                             (65)
	RExp -> '!' RExp                                   (66)
	RExp -> RExp '<' RExp                              (67)
	RExp -> RExp '<=' RExp                             (68)
	RExp -> RExp '==' RExp                             (69)
	RExp -> RExp '!=' RExp                             (70)
	RExp -> RExp '>=' RExp                             (71)
	RExp -> RExp '>' RExp                              (72)
	RExp -> RExp '+' RExp                              (73)
	RExp -> RExp '-' RExp                              (74)
	RExp -> RExp '*' RExp                              (75)
	RExp -> RExp '/' RExp                              (76)
	RExp -> RExp '%' RExp                              (77)
	RExp -> RExp '^' RExp                              (78)
	RExp -> '+' RExp                                   (79)
	RExp -> '-' RExp                                   (80)
	RExp -> '&' LExp                                   (81)
	RExp -> LExp                                       (82)
	RExp -> '[' ListRExp ']'                           (83)
	RExp -> Ident '(' ListRExp ')'                     (84)
	RExp -> Literal                                    (85)
	RExp -> '(' RExp ')'                               (86)
	Literal -> 'false'                                 (87)
	Literal -> 'true'                                  (88)
	Literal -> Char                                    (89)
	Literal -> Integer                                 (90)
	Literal -> Double                                  (91)
	Literal -> String                                  (92)
	ListForm ->                                        (93)
	ListForm -> Form                                   (94)
	ListForm -> Form ',' ListForm                      (95)
	ListDecl -> Decl                                   (96)
	ListDecl -> Decl ListDecl                          (97)
	ListVDecl -> VDecl                                 (98)
	ListVDecl -> VDecl ',' ListVDecl                   (99)
	ListCDecl -> CDecl                                 (100)
	ListCDecl -> CDecl ',' ListCDecl                   (101)
	ListStm -> Stm                                     (102)
	ListStm -> Stm ListStm                             (103)
	ListRExp ->                                        (104)
	ListRExp -> RExp                                   (105)
	ListRExp -> RExp ',' ListRExp                      (106)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'%='           { PT _ (TS _ 4) }
	'&'            { PT _ (TS _ 5) }
	'&&'           { PT _ (TS _ 6) }
	'('            { PT _ (TS _ 7) }
	')'            { PT _ (TS _ 8) }
	'*'            { PT _ (TS _ 9) }
	'*='           { PT _ (TS _ 10) }
	'+'            { PT _ (TS _ 11) }
	'++'           { PT _ (TS _ 12) }
	'+='           { PT _ (TS _ 13) }
	','            { PT _ (TS _ 14) }
	'-'            { PT _ (TS _ 15) }
	'--'           { PT _ (TS _ 16) }
	'-='           { PT _ (TS _ 17) }
	'..'           { PT _ (TS _ 18) }
	'/'            { PT _ (TS _ 19) }
	'/='           { PT _ (TS _ 20) }
	':'            { PT _ (TS _ 21) }
	';'            { PT _ (TS _ 22) }
	'<'            { PT _ (TS _ 23) }
	'<='           { PT _ (TS _ 24) }
	'='            { PT _ (TS _ 25) }
	'=='           { PT _ (TS _ 26) }
	'>'            { PT _ (TS _ 27) }
	'>='           { PT _ (TS _ 28) }
	'['            { PT _ (TS _ 29) }
	']'            { PT _ (TS _ 30) }
	'^'            { PT _ (TS _ 31) }
	'^='           { PT _ (TS _ 32) }
	'bool'         { PT _ (TS _ 33) }
	'break'        { PT _ (TS _ 34) }
	'char'         { PT _ (TS _ 35) }
	'const'        { PT _ (TS _ 36) }
	'continue'     { PT _ (TS _ 37) }
	'do'           { PT _ (TS _ 38) }
	'else'         { PT _ (TS _ 39) }
	'false'        { PT _ (TS _ 40) }
	'for'          { PT _ (TS _ 41) }
	'if'           { PT _ (TS _ 42) }
	'in'           { PT _ (TS _ 43) }
	'inout'        { PT _ (TS _ 44) }
	'int'          { PT _ (TS _ 45) }
	'out'          { PT _ (TS _ 46) }
	'param'        { PT _ (TS _ 47) }
	'proc'         { PT _ (TS _ 48) }
	'real'         { PT _ (TS _ 49) }
	'ref'          { PT _ (TS _ 50) }
	'return'       { PT _ (TS _ 51) }
	'string'       { PT _ (TS _ 52) }
	'then'         { PT _ (TS _ 53) }
	'true'         { PT _ (TS _ 54) }
	'var'          { PT _ (TS _ 55) }
	'void'         { PT _ (TS _ 56) }
	'while'        { PT _ (TS _ 57) }
	'{'            { PT _ (TS _ 58) }
	'||'           { PT _ (TS _ 59) }
	'}'            { PT _ (TS _ 60) }
	L_ident        { PT _ (TV _) }
	L_charac       { PT _ (TC _) }
	L_integ        { PT _ (TI _) }
	L_doubl        { PT _ (TD _) }
	L_quoted       { PT _ (TL _) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	Ident           rule  1
	Char            rule  2
	Integer         rule  3
	Double          rule  4
	String          rule  5
	Program         rule  6
	Decl            rules 7, 8, 9
	Form            rule  10
	Intent          rules 11, 12, 13, 14, 15, 16, 17
	VDecl           rules 18, 19
	CDecl           rule  20
	Type            rule  21
	Compound        rules 22, 23, 24
	Basic           rules 25, 26, 27, 28, 29, 30
	Block           rules 31, 32, 33, 34
	Stm             rules 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58
	Range           rule  59
	LExp            rules 60, 61, 62, 63
	RExp            rules 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86
	Literal         rules 87, 88, 89, 90, 91, 92
	ListForm        rules 93, 94, 95
	ListDecl        rules 96, 97
	ListVDecl       rules 98, 99
	ListCDecl       rules 100, 101
	ListStm         rules 102, 103
	ListRExp        rules 104, 105, 106

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'param'        shift, and enter state 6
	'proc'         shift, and enter state 7
	'var'          shift, and enter state 8

	Program        goto state 3
	Decl           goto state 4
	ListDecl       goto state 5

State 1


	L_ident        shift, and enter state 2


State 2

	Ident -> L_ident .                                  (rule 1)

	'!='           reduce using rule 1
	'%'            reduce using rule 1
	'%='           reduce using rule 1
	'&&'           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'*='           reduce using rule 1
	'+'            reduce using rule 1
	'+='           reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'-='           reduce using rule 1
	'..'           reduce using rule 1
	'/'            reduce using rule 1
	'/='           reduce using rule 1
	':'            reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'['            reduce using rule 1
	']'            reduce using rule 1
	'^'            reduce using rule 1
	'^='           reduce using rule 1
	'do'           reduce using rule 1
	'in'           reduce using rule 1
	'then'         reduce using rule 1
	'{'            reduce using rule 1
	'||'           reduce using rule 1
	'}'            reduce using rule 1


State 3

	%start_pProgram -> Program .                        (rule 0)

	%eof           accept


State 4

	ListDecl -> Decl .                                  (rule 96)
	ListDecl -> Decl . ListDecl                         (rule 97)

	'('            reduce using rule 96
	'*'            reduce using rule 96
	';'            reduce using rule 96
	'break'        reduce using rule 96
	'continue'     reduce using rule 96
	'do'           reduce using rule 96
	'for'          reduce using rule 96
	'if'           reduce using rule 96
	'param'        shift, and enter state 6
	'proc'         shift, and enter state 7
	'return'       reduce using rule 96
	'var'          shift, and enter state 8
	'while'        reduce using rule 96
	'{'            reduce using rule 96
	'}'            reduce using rule 96
	L_ident        reduce using rule 96
	%eof           reduce using rule 96

	Decl           goto state 4
	ListDecl       goto state 16

State 5

	Program -> ListDecl .                               (rule 6)

	%eof           reduce using rule 6


State 6

	Decl -> 'param' . ListCDecl ';'                     (rule 9)

	L_ident        shift, and enter state 2

	Ident          goto state 13
	CDecl          goto state 14
	ListCDecl      goto state 15

State 7

	Decl -> 'proc' . Ident '(' ListForm ')' Intent ':' Type Block    (rule 7)

	L_ident        shift, and enter state 2

	Ident          goto state 12

State 8

	Decl -> 'var' . ListVDecl ';'                       (rule 8)

	L_ident        shift, and enter state 2

	Ident          goto state 9
	VDecl          goto state 10
	ListVDecl      goto state 11

State 9

	VDecl -> Ident . ':' Type                           (rule 18)
	VDecl -> Ident . ':' Type '=' RExp                  (rule 19)

	':'            shift, and enter state 23


State 10

	ListVDecl -> VDecl .                                (rule 98)
	ListVDecl -> VDecl . ',' ListVDecl                  (rule 99)

	','            shift, and enter state 22
	';'            reduce using rule 98


State 11

	Decl -> 'var' ListVDecl . ';'                       (rule 8)

	';'            shift, and enter state 21


State 12

	Decl -> 'proc' Ident . '(' ListForm ')' Intent ':' Type Block    (rule 7)

	'('            shift, and enter state 20


State 13

	CDecl -> Ident . ':' Type '=' RExp                  (rule 20)

	':'            shift, and enter state 19


State 14

	ListCDecl -> CDecl .                                (rule 100)
	ListCDecl -> CDecl . ',' ListCDecl                  (rule 101)

	','            shift, and enter state 18
	';'            reduce using rule 100


State 15

	Decl -> 'param' ListCDecl . ';'                     (rule 9)

	';'            shift, and enter state 17


State 16

	ListDecl -> Decl ListDecl .                         (rule 97)

	'('            reduce using rule 97
	'*'            reduce using rule 97
	';'            reduce using rule 97
	'break'        reduce using rule 97
	'continue'     reduce using rule 97
	'do'           reduce using rule 97
	'for'          reduce using rule 97
	'if'           reduce using rule 97
	'return'       reduce using rule 97
	'while'        reduce using rule 97
	'{'            reduce using rule 97
	'}'            reduce using rule 97
	L_ident        reduce using rule 97
	%eof           reduce using rule 97


State 17

	Decl -> 'param' ListCDecl ';' .                     (rule 9)

	'('            reduce using rule 9
	'*'            reduce using rule 9
	';'            reduce using rule 9
	'break'        reduce using rule 9
	'continue'     reduce using rule 9
	'do'           reduce using rule 9
	'for'          reduce using rule 9
	'if'           reduce using rule 9
	'param'        reduce using rule 9
	'proc'         reduce using rule 9
	'return'       reduce using rule 9
	'var'          reduce using rule 9
	'while'        reduce using rule 9
	'{'            reduce using rule 9
	'}'            reduce using rule 9
	L_ident        reduce using rule 9
	%eof           reduce using rule 9


State 18

	ListCDecl -> CDecl ',' . ListCDecl                  (rule 101)

	L_ident        shift, and enter state 2

	Ident          goto state 13
	CDecl          goto state 14
	ListCDecl      goto state 36

State 19

	CDecl -> Ident ':' . Type '=' RExp                  (rule 20)

	'*'            reduce using rule 22
	'['            reduce using rule 22
	'bool'         reduce using rule 22
	'char'         reduce using rule 22
	'int'          reduce using rule 22
	'real'         reduce using rule 22
	'string'       reduce using rule 22
	'void'         reduce using rule 22

	Type           goto state 35
	Compound       goto state 25

State 20

	Decl -> 'proc' Ident '(' . ListForm ')' Intent ':' Type Block    (rule 7)

	')'            reduce using rule 93
	'const'        shift, and enter state 30
	'in'           shift, and enter state 31
	'inout'        shift, and enter state 32
	'out'          shift, and enter state 33
	'ref'          shift, and enter state 34
	L_ident        reduce using rule 11

	Form           goto state 27
	Intent         goto state 28
	ListForm       goto state 29

State 21

	Decl -> 'var' ListVDecl ';' .                       (rule 8)

	'('            reduce using rule 8
	'*'            reduce using rule 8
	';'            reduce using rule 8
	'break'        reduce using rule 8
	'continue'     reduce using rule 8
	'do'           reduce using rule 8
	'for'          reduce using rule 8
	'if'           reduce using rule 8
	'param'        reduce using rule 8
	'proc'         reduce using rule 8
	'return'       reduce using rule 8
	'var'          reduce using rule 8
	'while'        reduce using rule 8
	'{'            reduce using rule 8
	'}'            reduce using rule 8
	L_ident        reduce using rule 8
	%eof           reduce using rule 8


State 22

	ListVDecl -> VDecl ',' . ListVDecl                  (rule 99)

	L_ident        shift, and enter state 2

	Ident          goto state 9
	VDecl          goto state 10
	ListVDecl      goto state 26

State 23

	VDecl -> Ident ':' . Type                           (rule 18)
	VDecl -> Ident ':' . Type '=' RExp                  (rule 19)

	'*'            reduce using rule 22
	'['            reduce using rule 22
	'bool'         reduce using rule 22
	'char'         reduce using rule 22
	'int'          reduce using rule 22
	'real'         reduce using rule 22
	'string'       reduce using rule 22
	'void'         reduce using rule 22

	Type           goto state 24
	Compound       goto state 25

State 24

	VDecl -> Ident ':' Type .                           (rule 18)
	VDecl -> Ident ':' Type . '=' RExp                  (rule 19)

	','            reduce using rule 18
	';'            reduce using rule 18
	'='            shift, and enter state 52


State 25

	Type -> Compound . Basic                            (rule 21)
	Compound -> Compound . '[' RExp ']'                 (rule 23)
	Compound -> Compound . '*'                          (rule 24)

	'*'            shift, and enter state 44
	'['            shift, and enter state 45
	'bool'         shift, and enter state 46
	'char'         shift, and enter state 47
	'int'          shift, and enter state 48
	'real'         shift, and enter state 49
	'string'       shift, and enter state 50
	'void'         shift, and enter state 51

	Basic          goto state 43

State 26

	ListVDecl -> VDecl ',' ListVDecl .                  (rule 99)

	';'            reduce using rule 99


State 27

	ListForm -> Form .                                  (rule 94)
	ListForm -> Form . ',' ListForm                     (rule 95)

	')'            reduce using rule 94
	','            shift, and enter state 42


State 28

	Form -> Intent . Ident ':' Type                     (rule 10)

	L_ident        shift, and enter state 2

	Ident          goto state 41

State 29

	Decl -> 'proc' Ident '(' ListForm . ')' Intent ':' Type Block    (rule 7)

	')'            shift, and enter state 40


State 30

	Intent -> 'const' . 'in'                            (rule 16)
	Intent -> 'const' . 'ref'                           (rule 17)

	'in'           shift, and enter state 38
	'ref'          shift, and enter state 39


State 31

	Intent -> 'in' .                                    (rule 12)

	':'            reduce using rule 12
	L_ident        reduce using rule 12


State 32

	Intent -> 'inout' .                                 (rule 14)

	':'            reduce using rule 14
	L_ident        reduce using rule 14


State 33

	Intent -> 'out' .                                   (rule 13)

	':'            reduce using rule 13
	L_ident        reduce using rule 13


State 34

	Intent -> 'ref' .                                   (rule 15)

	':'            reduce using rule 15
	L_ident        reduce using rule 15


State 35

	CDecl -> Ident ':' Type . '=' RExp                  (rule 20)

	'='            shift, and enter state 37


State 36

	ListCDecl -> CDecl ',' ListCDecl .                  (rule 101)

	';'            reduce using rule 101


State 37

	CDecl -> Ident ':' Type '=' . RExp                  (rule 20)
